--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,25 @@
-## [v0.1.1] - 2024-10-25
+## [v0.1.8] - 2024-12-02
+- Upload corrections to tray prints with new Elbow Tendon Hanger
+
+## [v0.1.7] - 2024-11-28
+- Upload corrections to Elbow Tendon Hanger
+
+## [v0.1.6] - 2024-11-15
+- Upload left arm
+
+## [v0.1.5] - 2024-10-31
+- Upload First_Hand_Draft
+- Upload Second_Arm_Draft
+- Create BOM
+
+## [v0.1.4] - 2024-10-25
 - Uploaded First_Finger_Draft stl and BOM.
 - Uploaded First_Arm_and_Hand_Draft STEP - Detailing on thumb not done yet so unprintable but ok for modelling.
 
-## [v0.1.1] - 2024-10-18
+## [v0.1.3] - 2024-10-18
 - Uploaded First_Arm_Draft stl and BOM.
 
-## [v0.1.1] - 2024-10-11
+## [v0.1.2] - 2024-10-11
 - Uploaded First_Arm_Test stl.
 
 ## [v0.1.1] - 2024-10-04
